# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  app.py  docker-compose.yml  flask_config.py  integration_test.py  pyproject.toml  run.py  selenium_test.py  test_to_do_item.py  test_viewmodel.py  to_do_item.py  trello_client.py  viewmodel.py
.github/: dependabot.yml
.github/workflows/: pylint.yml
app/: __init__.py  atlas_client.py  auth_utils.py  client_interface.py  create_app.py  flask_config.py  role.py  routes.py  to_do_item.py  trello_client.py  user.py  viewmodel.py
app/templates/: index.html
scripts/: deploy.sh  prod-entrypoint.sh
templates/: index.html
test/: integration_test.py  test_user.py
test/e2e/: e2e_selenium_test.py
test/e2e_tests/: selenium_test.py
test/integration/: atlas_client_test.py  integration_test.py
test/unit/: atlas_client_test.py  test_to_do_item.py  test_viewmodel.py
tests_e2e/: selenium_test.py
