[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
python-dotenv = "^0.17.1"
requests = "^2.24.0"
gunicorn = "^20.1.0"
pymongo = {version = "^3.11.4", extras = ["srv", "tls"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
selenium = "^3.3.0"
pylint = "^2.8.2"
mongomock = "^3.22.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"