[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
python-dotenv = "^0.18.0"
requests = "^2.24.0"
gunicorn = "^20.1.0"
pymongo = {version = "^3.11.4", extras = ["srv", "tls"]}
oauthlib = "^3.1.1"
flask-login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
selenium = "^3.3.0"
pylint = "^2.9.1"
mongomock = "^3.22.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"